# huffman

./: .gitignore  Main.hs  README.md  huffman.cabal
app/: Main.hs
