cabal-version:      3.4
name:               huffman
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jasper Reef
maintainer:         mail@jasperreef.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable huffman
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      base ^>=4.18.2.1,
      primitive,
      bytestring,
      containers,
      pqueue,
      vector
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        LambdaCase
        OverloadedRecordDot
        DuplicateRecordFields
        OverloadedStrings
        StrictData
        MagicHash
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wno-incomplete-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wno-name-shadowing
        -threaded
        -rtsopts
        -O2
